2005-08-09 - johan
All palette handling converted to C.

2005-08-04 - johan
Partial implementation of v_getbitmap_info.
Implemented vs_ctab and vdi<->index conversions.
Added text acceleration support to ARAnyM driver.

2005-08-02 - johan
Fixed problem with large number of open virtual workstations.
Fake implementations of a number of vector font functions.
Some bug fixes and minor improvements.
	
2005-07-26 - johan
New memory allocation algorithm that requests largish blocks from the OS
at once, splits them into pieces to satisfy requests, and keeps released
blocks around for reuse.
FreeType support upgraded for version 2.1.10.
Change to allow FreeType font files to be kept open for longer intervals
under some circumstances.
Partial vr_transfer_bits implementation.
Fake implementations of the colour table related functions.

2005-07-18 - johan
Initial support for vr_transfer_bits.
Debug printouts for non-implemented VDI functions.
Signed/unsigned support for structer.
fVDI engine version bumped to 0.965beta.
	
2005-07-09 - johan
Fixed bug that caused polygon fill to overwrite low memory.
Fixed bug concerning filled rounded boxes.

2005-07-06 - johan
Added default size selection for vector fonts.
Fixed bug that caused for example QED to fail to draw vector fonts.
Fixes for Lattice C support.
Began conversion to new driver interface.

2005-07-01 - johan
Bug fixed and improved label handling for FVDI.SYS.
Miscellaneous small fixes to make the RageII driver build with gcc.

2005-06-29 - johan
Changed vq_gdos response if requested.
Made '=' a token separator for better FVDI.SYS handling.
Implemented vst_arbpt (only allowed for vector fonts).
Faked vst_height by making it equivalent to vst_point.
vqt_name updated to report vector font information (assumes TrueType).
Improved debug output.

2005-06-11 - patrice
Removed the function from last entry.

2005-06-08 - patrice
Function to get real frame buffer bit organization in ARAnyM driver.
	
2005-06-07 - johan