@@ -1,3 +1,6 @@
+2005-08-10 - johan
+All vq_extnd variants converted to C.
+
 2005-08-09 - johan
 All palette handling converted to C.
 
